colors and gravatar

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: this is a title
-tagline: this is a tagline
+title: Andy Won
+tagline: doin thangs
 ---
 
 {% for post in paginator.posts %}
