--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Andy Won
+title: andywon.nyc
 tagline: doin thangs
 ---
 
-<img src="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2013/7/7/1373215975711/Andy-Murray-wins-Wimbledo-005.jpg" alt="Andy Won!">
+<img class="img-responsive center-block" src="/img/chelseakid.jpg" alt="Andy Won!">
